--- a/Recipe_Builder_For_You_Foodieez_Revision1.ipynb
+++ b/Recipe_Builder_For_You_Foodieez_Revision1.ipynb
@@ -231,18 +231,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "id": "2ed2f8f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ingredient': [{'qun': '1', 'utensils': 'cup', 'ingredients': 'butter, divided'}, {'qun': '1', 'ingredients': 'onion, minced'}, {'qun': '1', 'utensils': 'tablespoon', 'ingredients': 'minced garlic'}, {'qun': '1', 'utensils': '(15 ounce) can', 'ingredients': 'tomato sauce'}, {'qun': '3', 'utensils': 'cups', 'ingredients': 'heavy cream'}, {'qun': '2', 'utensils': 'teaspoons', 'ingredients': 'salt'}, {'qun': '1', 'utensils': 'teaspoon', 'ingredients': 'cayenne pepper'}, {'qun': '1', 'utensils': 'teaspoon', 'ingredients': 'garam masala'}, {'qun': '1 ½', 'utensils': 'pounds', 'ingredients': 'skinless, boneless chicken breast, cut into bite-sized chunks'}, {'qun': '2', 'utensils': 'tablespoons', 'ingredients': 'vegetable oil'}, {'qun': '2', 'utensils': 'tablespoons', 'ingredients': 'tandoori masala'}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#FOR jdict library\n",
     "#jdict=dict()\n",
@@ -262,7 +254,7 @@
     "                singledict[\"ingredients\"]=spanhtml[i][j].text\n",
     "    #print(singledict)\n",
     "    jlist.append(singledict)\n",
-    "jdict['ingredient']=jlist\n",
+    "jdict['ingredients']=jlist\n",
     "#print(jdict)\n",
     "#now give value to jdict key & val as this dict"
    ]
@@ -544,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "9ca0a8ba",
    "metadata": {},
    "outputs": [],
@@ -620,7 +612,7 @@
     "                    singledict[\"ingredients\"]=spanhtml[i][j].text\n",
     "    #print(singledict)\n",
     "    jlist.append(singledict)\n",
-    "    jdict['ingredient']=jlist\n",
+    "    jdict['ingredients']=jlist\n",
     "    #print(jdict)\n",
     "    #now give value to jdict key & val as this dict\n",
     "    \n",
@@ -702,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "id": "46caa0c2",
    "metadata": {
     "scrolled": true
@@ -749,7 +741,7 @@
       " \n",
       "You can refer same recipe via youtube based on video link below,which is best recommendation of YouTube:\n",
       "https://www.youtube.com/watch?v=hsR0JaD1TyA\n",
-      "{'link': 'https://www.allrecipes.com/recipe/240652/paneer-tikka-masala/', 'ingredient': [{'qun': '1', 'utensils': 'teaspoon', 'ingredients': 'salt, or to taste'}], 'Prep Time:': '20 mins', 'Cook Time:': '40 mins', 'Total Time:': ' 1 hrs', 'Servings:': '6 ', 'steps': [{'step': 0, 'text': 'Melt butter in a skillet over medium heat. Add paneer; cook and stir until golden, about 5 minutes. Add onions, bell pepper, jalapeños, ground cashews, garlic paste, ginger paste, cayenne pepper, cumin, coriander, and garam masala; cook and stir until well combined and fragrant, about 1 minute.'}, {'step': 1, 'text': 'Mix tomato sauce, half-and-half, and salt into paneer mixture; simmer until thickened, about 30 minutes.'}], 'TopYouTubelink': 'https://www.youtube.com/watch?v=hsR0JaD1TyA'}\n"
+      "{'link': 'https://www.allrecipes.com/recipe/240652/paneer-tikka-masala/', 'ingredients': [{'qun': '1', 'utensils': 'teaspoon', 'ingredients': 'salt, or to taste'}], 'Prep Time:': '20 mins', 'Cook Time:': '40 mins', 'Total Time:': ' 1 hrs', 'Servings:': '6 ', 'steps': [{'step': 0, 'text': 'Melt butter in a skillet over medium heat. Add paneer; cook and stir until golden, about 5 minutes. Add onions, bell pepper, jalapeños, ground cashews, garlic paste, ginger paste, cayenne pepper, cumin, coriander, and garam masala; cook and stir until well combined and fragrant, about 1 minute.'}, {'step': 1, 'text': 'Mix tomato sauce, half-and-half, and salt into paneer mixture; simmer until thickened, about 30 minutes.'}], 'TopYouTubelink': 'https://www.youtube.com/watch?v=hsR0JaD1TyA'}\n"
      ]
     }
    ],
@@ -788,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "id": "f534a730",
    "metadata": {},
    "outputs": [
@@ -837,7 +829,7 @@
       " \n",
       "You can refer same recipe via youtube based on video link below,which is best recommendation of YouTube:\n",
       "https://www.youtube.com/watch?v=hsR0JaD1TyA\n",
-      "{'link': 'https://www.allrecipes.com/recipe/141169/easy-indian-butter-chicken/', 'ingredient': [{'qun': '2', 'utensils': 'tablespoons', 'ingredients': 'tandoori masala'}], 'Prep Time:': '15 mins', 'Cook Time:': '45 mins', 'Total Time:': ' 1 hrs', 'Servings:': '6 ', 'steps': [{'step': 0, 'text': 'Preheat the oven to 375 degrees F (190 degrees C).'}, {'step': 1, 'text': 'Melt 2 tablespoons butter in a skillet over medium heat. Stir in onion and garlic, and cook slowly until the onion caramelizes to a dark brown, about 15 minutes.'}, {'step': 2, 'text': 'Meanwhile, combine cream, tomato sauce, remaining butter, salt, cayenne pepper, and garam masala in a saucepan over medium-high heat; bring to a simmer. Reduce heat to medium-low, cover, and simmer, stirring occasionally, for 30 minutes. Stir in caramelized onions.'}, {'step': 3, 'text': 'While the sauce is simmering, toss chicken with vegetable oil until coated. Season with tandoori masala and spread out onto a baking sheet.'}, {'step': 4, 'text': 'Bake chicken in the preheated oven until no longer pink in the center, about 12 minutes.'}, {'step': 5, 'text': 'Add cooked chicken to the sauce and simmer for 5 minutes before serving.'}], 'TopYouTubelink': 'https://www.youtube.com/watch?v=hsR0JaD1TyA'}\n"
+      "{'link': 'https://www.allrecipes.com/recipe/141169/easy-indian-butter-chicken/', 'ingredients': [{'qun': '2', 'utensils': 'tablespoons', 'ingredients': 'tandoori masala'}], 'Prep Time:': '15 mins', 'Cook Time:': '45 mins', 'Total Time:': ' 1 hrs', 'Servings:': '6 ', 'steps': [{'step': 0, 'text': 'Preheat the oven to 375 degrees F (190 degrees C).'}, {'step': 1, 'text': 'Melt 2 tablespoons butter in a skillet over medium heat. Stir in onion and garlic, and cook slowly until the onion caramelizes to a dark brown, about 15 minutes.'}, {'step': 2, 'text': 'Meanwhile, combine cream, tomato sauce, remaining butter, salt, cayenne pepper, and garam masala in a saucepan over medium-high heat; bring to a simmer. Reduce heat to medium-low, cover, and simmer, stirring occasionally, for 30 minutes. Stir in caramelized onions.'}, {'step': 3, 'text': 'While the sauce is simmering, toss chicken with vegetable oil until coated. Season with tandoori masala and spread out onto a baking sheet.'}, {'step': 4, 'text': 'Bake chicken in the preheated oven until no longer pink in the center, about 12 minutes.'}, {'step': 5, 'text': 'Add cooked chicken to the sauce and simmer for 5 minutes before serving.'}], 'TopYouTubelink': 'https://www.youtube.com/watch?v=hsR0JaD1TyA'}\n"
      ]
     }
    ],
@@ -847,51 +839,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "a979c59f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello! Happy cooking!\n",
-      "link for this receip is  https://www.allrecipes.com/recipe/21060/toasted-garlic-bread/\n",
-      " \n",
-      "Details for this recipe:\n",
-      " \n",
-      "Prep Time: : 10 mins\n",
-      "Cook Time: : 5 mins\n",
-      "Total Time: : 15 mins\n",
-      "Servings: : 10 \n",
-      " \n",
-      "Here is list of all ingredients needed with it's quantity:\n",
-      " \n",
-      "1\":\"['1', '(1 pound) loaf', 'Italian bread']\n",
-      "2\":\"['5', 'tablespoons', 'butter, softened']\n",
-      "3\":\"['3', 'cloves', 'garlic, crushed']\n",
-      "4\":\"['2', 'teaspoons', 'extra virgin olive oil']\n",
-      "5\":\"['1', 'teaspoon', 'dried oregano']\n",
-      "6\":\"['salt and pepper to taste']\n",
-      "7\":\"['1', 'cup', 'shredded mozzarella cheese']\n",
-      "['1', 'cup', 'shredded mozzarella cheese']\n",
-      " \n",
-      "Let's look at steps for recipe:\n",
-      " \n",
-      "Step Number 1: Set an oven rack about 6 inches from the heat source and preheat the oven's broiler. Cut loaf into ten 1-inch slices.\n",
-      " \n",
-      "Step Number 2: Mix butter, garlic, oil, oregano, salt, and pepper together in a bowl; spread butter mixture on one side of each slice of bread; arrange bread slices, butter-side up, in a single layer on a baking sheet.\n",
-      " \n",
-      "Step Number 3: Cook under the preheated broiler until slightly brown, checking frequently so they do not burn, about 3 minutes.\n",
-      " \n",
-      "Step Number 4: Top bread slices with cheese and return to broiler until cheese is slightly brown and melted, about 2 minutes. Serve hot.\n",
-      " \n",
-      "You can refer same recipe via youtube based on video link below,which is best recommendation of YouTube:\n",
-      "https://www.youtube.com/watch?v=hsR0JaD1TyA\n",
-      "{'link': 'https://www.allrecipes.com/recipe/21060/toasted-garlic-bread/', 'ingredient': [{'qun': '1', 'utensils': 'cup', 'ingredients': 'shredded mozzarella cheese'}], 'Prep Time:': '10 mins', 'Cook Time:': '5 mins', 'Total Time:': '15 mins', 'Servings:': '10 ', 'steps': [{'step': 0, 'text': \"Set an oven rack about 6 inches from the heat source and preheat the oven's broiler. Cut loaf into ten 1-inch slices.\"}, {'step': 1, 'text': 'Mix butter, garlic, oil, oregano, salt, and pepper together in a bowl; spread butter mixture on one side of each slice of bread; arrange bread slices, butter-side up, in a single layer on a baking sheet.'}, {'step': 2, 'text': 'Cook under the preheated broiler until slightly brown, checking frequently so they do not burn, about 3 minutes.'}, {'step': 3, 'text': 'Top bread slices with cheese and return to broiler until cheese is slightly brown and melted, about 2 minutes. Serve hot.'}], 'TopYouTubelink': 'https://www.youtube.com/watch?v=hsR0JaD1TyA'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "recipe(\"Garlic Bread\")"
    ]
